# dynamic-protobuf

./: LICENSE  README.md  pyproject.toml
examples/: basic_example.py
protobuf_schema_builder/: __init__.py  builder.py  exceptions.py  field_handlers.py  mixins.py  serialization.py
tests/: test_builder.py
